# ed25519-speccheck

./: CONTRIBUTING.md  Cargo.toml  README.md  cases.json  cases.txt  results.md  run.sh
.github/workflows/: main.yml
scripts/: cases.json  ed25519_test.go  pynacl_test.py  python-ed25519.py
scripts/botan/: Makefile  README.md  main.cpp
scripts/ed25519-ios/: Ed25519.swift  README.md
scripts/ed25519-java/: README.md  ed25519_edge_cases_test_vector.json  pom.xml
scripts/ed25519-java/src/main/java/: Ed25519TestCase.java  EncodingUtils.java  TestVectorChecker.java
scripts/ed25519-signal-donna/: CMakeLists.txt  README.md  build+run.sh  main.c  test_vector.txt
scripts/eddsa_test/: eddsa_test.js  package.json
scripts/go/: README.md  main.go
scripts/libgcrypt/: Makefile  README.md  main.c
scripts/libressl/: Makefile  README.md  main.c  try_ed25519.patch
scripts/libsodium/: Makefile  README.md  main.c
scripts/monocypher/: Makefile  README.md  main.c
scripts/npm/: README.md  eddsa_test.js  package-lock.json  package.json
scripts/openssl_3/: README.md  main.c  test_script.sh  test_vector.txt
scripts/pyca-openssl/: README.md  eddsa_utils.py
scripts/python-ed25519/: README.md  add_test_git.patch
scripts/ref10/: Makefile  README.md  main  main.c  test_vector.txt  to_ref10.patch
scripts/tweetnacl/: Makefile  README.md  main.c  package.json  test.js
scripts/tweetnacl-js/: README.md  package.json  test.js
scripts/wolfssl/: Makefile  README.md  main.c
scripts/zig/: build.zig
scripts/zig/src/: main.zig
src/: main.rs  non_reducing_scalar52.rs
