[package]
name = "ed25519-speccheck"
version = "0.1.0"
authors = ["François Garillot <francois@garillot.net>"]
edition = "2018"


[dependencies]
anyhow = "1.0.32"
curve25519-dalek = "2.1.0"
hex = "0.4.2"
rand = "0.7.3"
sha2 = "0.9.1"

[dev-dependencies]
ed25519-dalek = "1.0.0-pre.4"
ed25519-zebra = "2.1.1"
