[package]
name = "ed25519-speccheck"
version = "0.1.0"
authors = ["François Garillot <francois@garillot.net>"]
edition = "2018"


[dependencies]
anyhow = "1.0.32"
curve25519-dalek = "2.1.0"
hacl-star = { git = "https://github.com/quininer/rust-hacl-star", version = "0.2.0"}
hex = "0.4.2"
rand = "0.7.3"
sha2 = "0.9.1"
serde_json = "1.0"
serde = { version = "1.0.115", features = ["derive"] }
log = "0.4.11"
env_logger = "0.7.1"
string-builder = "0.2.0"

[dev-dependencies]
ed25519-dalek = "1.0.0-pre.4"
ed25519-zebra = "2.1.1"
ring = "0.16.5"
untrusted = "0.7.1"
libra-crypto = { git = "https://github.com/libra/libra.git" }
